[project]
name = "jg.cluck"
version = "0.0.1"
description = "Backup record of audio during Junior Guru talks"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "honza@junior.guru"}]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]

[project.urls]
repository = "https://github.com/juniorguru/cluck"

[project.scripts]
cluck = "jg.cluck.__main__:main"

[dependency-groups]
dev = [
    # "pytest-ruff>=0.4.1",
    # "pytest>=7.2.1",
    # "ruff>=0.8.4",
]

# [tool.pytest.ini_options]
# pythonpath = ["."]
# testpaths = "tests"
# norecursedirs = "env venv .git"
# addopts = "--ff --ruff --ruff-format --cov=fiobank --cov-report=term-missing:skip-covered --cov-context=test"
# filterwarnings = ["ignore:Using float for money can cause inaccuracies:DeprecationWarning"]

# [tool.ruff.lint]
# extend-select = ["I", "UP"]

# [tool.ruff.lint.isort]
# combine-as-imports = true
# lines-after-imports = 2

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jg.cluck"
